LiAo:新增Toast版本控制，修改失效接口